# credit-scoring-mlops

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  app_entry.py  gradio_app.py  pyproject.toml  requirements.txt  requirements_api.txt  requirements_dev.txt  test_api.ipynb
.github/workflows/: deploy-assets.yml  deploy.yml
app/: __init__.py  main.py
artifacts/: preprocessor.joblib
data/: HistGB_final_model.pkl  data_final.parquet
monitoring/: drift_report.py
notebooks/: P6_MANET_Stephane_notebook_modélisation.ipynb  mlflow.db  test_api.ipynb
src/: feature_engineering.py  features.py
tests/: conftest.py  test_api.py
