[tool.poetry]
name = "ocr-projet06"
version = "0.1.0"
description = "Credit scoring API and notebooks"
authors = ["OCR Project"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "0.121.0"
uvicorn = "0.30.6"
pydantic = "2.12.4"
numpy = ">=2.2.6"
pandas = "2.2.3"
pyarrow = ">=15.0.2"
scikit-learn = "1.8.0"
scipy = "1.14.1"
joblib = "1.5.2"
threadpoolctl = "3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
